--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,10 @@ android {
         enabled = true
     }
 
+    androidExtensions {
+        experimental = true
+    }
+
 }
 
 dependencies {
@@ -84,10 +88,8 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:2.3.0-alpha04"
     implementation "androidx.navigation:navigation-ui-ktx:2.3.0-alpha04"
 
-    //Groupie is a simple, flexible library for complex RecyclerView layouts.
-    implementation 'com.xwray:groupie:2.7.0'
-    implementation 'com.xwray:groupie-kotlin-android-extensions:2.7.0'
-    implementation 'com.xwray:groupie-databinding:2.7.0'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
     implementation "androidx.preference:preference-ktx:1.1.0"
 }
