--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.baseactivity.BaseActivity"></activity>
+        <activity android:name=".ui.newsdetail.NewsDetailActivity"></activity>
+        <activity android:name=".ui.baseactivity.BaseActivity" />
         <activity android:name=".ui.kotlinnewslist.NewsListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
