added base activity and baseviwemodel. and enable viewBinding.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ android {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
 
-    dataBinding {
+    viewBinding {
         enabled = true
     }
 
