fixed bug for images

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,13 +23,7 @@
         </activity>
         <activity android:name=".ui.newsdetail.NewsDetailActivity" />
         <activity android:name=".ui.baseactivity.BaseActivity" />
-        <activity android:name=".ui.kotlinnewslist.NewsListActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".ui.kotlinnewslist.NewsListActivity"/>
     </application>
 
 </manifest>
